@@ -11,7 +11,8 @@
 .tt-suggestion p {margin:0;}
 
 .crumb_wrap				{display:none;}
-#view_search_test		{margin:auto; width:960px; margin-bottom:480px; margin-top:20px;}
+#view_search_test		{margin:auto; width:960px; margin-bottom:480px; margin-top:30px;}
 input#view_search_string, input.typeahead.tt-hint		{font-size:32px; width:936px; height:48px; border:0; margin-top:10px;}
 .search					{display:inline-block; width:320px; margin-bottom:15px;}
 .search_label			{color:#fff;font-size:1em;border-bottom:1px solid #888;padding-bottom:5px;margin-right:23px;margin-bottom:10px;}
+.search_label img		{padding-right:7px;}
