@@ -18,37 +18,37 @@
 <div id="view_search_test">
 
 <div class="search">
-	<div class="search_label">RECIPIENT</div>
+	<div class="search_label"><img src="{art}search_recipient.png" alt="Recipient icon" width="13" height="13"/>RECIPIENT</div>
 <select id="view_search_select_country" class="chosen">
 	<option value></option>
 	{search_options_country}
 </select>
 </div><div class="search">
-	<div class="search_label">FUNDER</div>
+	<div class="search_label"><img src="{art}search_funder.png" alt="Funder icon" width="13" height="13"/>FUNDER</div>
 <select id="view_search_select_funder" class="chosen">
 	<option value></option>
 	{search_options_funder}
 </select>
 </div><div class="search">
-	<div class="search_label">SECTOR</div>
+	<div class="search_label"><img src="{art}search_sector.png" alt="Sector icon" width="13" height="13"/>SECTOR</div>
 <select id="view_search_select_sector" class="chosen">
 	<option value></option>
 	{search_options_sector}
 </select>
 </div><div class="search">
-	<div class="search_label">SECTOR CATEGORY</div>
+	<div class="search_label"><img src="{art}search_sector_cat.png" alt="Sector Category icon" width="13" height="13"/>SECTOR CATEGORY</div>
 <select id="view_search_select_category" class="chosen">
 	<option value></option>
 	{search_options_category}
 </select>
 </div><div class="search">
-	<div class="search_label">PUBLISHER</div>
+	<div class="search_label"><img src="{art}search_publisher.png" alt="Publisher icon" width="13" height="13"/>PUBLISHER</div>
 <select id="view_search_select_publisher" class="chosen">
 	<option value></option>
 	{search_options_publisher}
 </select>
 </div><div class="search">
-	<div class="search_label">YEAR</div>
+	<div class="search_label"><img src="{art}search_year.png" alt="Year icon" width="13" height="13"/>YEAR</div>
 <select id="view_search_select_year" class="chosen">
 	<option value></option>
 	{search_options_year}
