@@ -3,6 +3,7 @@ Development Portal (2015-06-24 shi)
 Added initial page layout for Search
 Added labels to search
 Clean up CSS for Search
+Added icons for Search and labels
 
 
 Development Portal (2015-06-18 shi)
